--- a/api-database/package.json
+++ b/api-database/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0"
