--- a/api-dwl/package.json
+++ b/api-dwl/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
-    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "nodemon": "^3.1.4"
   }
 }
