--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2"
   },
